# DroneGroundStation

./: .clang-format  .gitattributes  .gitignore  AltitudeChart.qml  AttitudeIndicator.qml  CMakeLists.txt  CoordinateChart.qml  Dashboard.qml  FlightCurve.qml  HistoryFlightPath.qml  HistoryPage.qml  HistoryTable.qml  LoginPage.qml  Main.qml  MainPage.qml  MapView.qml  README.md  StatusPanel.qml  Stm32FlightCurve.qml  Stm32MapView.qml  Stm32Page.qml  TelemetryPanel.qml  TemperatureHumidityChart.qml  backend.cpp  backend.h  cloudbackend.cpp  cloudbackend.h  historydatabase.cpp  historydatabase.h  index.html  main.cpp  sensorbackend.cpp  sensorbackend.h
cloud-dashboard/: README.md  package-lock.json  package.json  pnpm-lock.yaml
cloud-dashboard/.openai/: hosting.json
cloud-dashboard/app/: DashboardClient.tsx  globals.css  layout.tsx
cloud-dashboard/app/api/history/: route.ts
cloud-dashboard/app/api/ingest/: route.ts
cloud-dashboard/db/: schema.ts
cloud-dashboard/drizzle/: 0000_tired_nightshade.sql
cloud-dashboard/drizzle/meta/: 0000_snapshot.json  _journal.json
config/: cloud.example.json
database/: .gitkeep
docs/: 云端部署与跨设备访问.md  技术流程文档.md  操作使用说明.md
